@@ -1,3 +1,11 @@
+2000-01-31  Matti Aarnio  <mea@mea.tmt.tele.fi>
+
+	* utils/mxverify/mxverify-cgi.c:
+	    Move "test with user-suppled address" before the
+	    "test with postmaster" case.  In case the Postmaster
+	    doesn't exist (which is an error in itself, though..),
+	    the user supplied address is tested very least.
+
 2000-01-25  Matti Aarnio  <mea@mea.tmt.tele.fi>
 
 	* transports/smtp/smtp.c, transports/smtp/appendlet.c:
